// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSymbol should render if closed 1`] = `
.emotion-1 {
  height: 24px;
  width: 24px;
  -webkit-transition: -webkit-transform 300ms ease;
  -webkit-transition: transform 300ms ease;
  transition: transform 300ms ease;
}

.emotion-1 svg {
  fill: rgba(0,0,0,.87);
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  [object Object]
</div>
`;

exports[`ToggleSymbol should render if open 1`] = `
.emotion-1 {
  height: 24px;
  width: 24px;
  -webkit-transition: -webkit-transform 300ms ease;
  -webkit-transition: transform 300ms ease;
  transition: transform 300ms ease;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-1 svg {
  fill: rgba(0,0,0,.87);
}

<div
  class="emotion-0 emotion-1 emotion-2"
>
  [object Object]
</div>
`;
